--- a/privacy.html
+++ b/privacy.html
@@ -21,7 +21,7 @@
     <h2>Your rights</h2>
     <p>You can request access, correction, or deletion of your contact information by emailing [email].</p>
     <h2>Contact</h2>
-    <p>Email: coming soon</p>
+    <p>Email: founders@sociable-robotics.com</p>
     <p><a href="index.html">Back to home</a></p>
   </main>
 </body>
