--- a/terms.html
+++ b/terms.html
@@ -19,7 +19,7 @@
     <h2>Liability</h2>
     <p>We make reasonable efforts to keep information accurate, but do not guarantee completeness or uninterrupted availability.</p>
     <h2>Contact</h2>
-    <p>Email: coming soon</p>
+    <p>Email: founders@sociable-robotics.com</p>
     <p><a href="index.html">Back to home</a></p>
   </main>
 </body>
