webpage update with data viewer

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <a href="#solution">Solution</a>
         <a href="#modalities">Modalities</a>
         <a href="#waitlist">Waitlist</a>
+        <a href="data-viewer.html">Data</a>
       </nav>
     </div>
   </header>
@@ -53,7 +54,7 @@
           <p class="lead">Sociable Robotics captures human interactions in cafes and hotels, designed for robotics teams building VLA and world models.</p>
           <p class="cta-row">
             <a class="btn btn-primary" href="#waitlist" data-cta="hero-waitlist">Join waitlist</a>
-            <a class="btn btn-secondary" href="#modalities">View modalities</a>
+            <a class="btn btn-primary" href="data-viewer.html">View data</a>
           </p>
         </div>
         <aside class="outcomes" aria-label="Buyer outcomes">
