vimeo demo added

--- a/data-viewer.html
+++ b/data-viewer.html
@@ -237,9 +237,9 @@
                 <div class="scenario-video active" data-scenario="scenario-1">
                   <div class="video-wrapper">
                     <iframe 
-                      src="https://www.youtube.com/embed/1NkSD1i_ICo" 
+                      src="https://player.vimeo.com/video/1167575024" 
                       frameborder="0" 
-                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                      allow="autoplay; fullscreen; picture-in-picture" 
                       allowfullscreen
                       style="width: 100%; aspect-ratio: 16/9; border-radius: var(--radius-sm);">
                     </iframe>
