fixed the aspect ratio of git

--- a/data-viewer.html
+++ b/data-viewer.html
@@ -240,7 +240,7 @@
                     <img 
                       src="assets/00045.gif" 
                       alt="Egocentric view: a human hand pulls the highlighted white bottle closer on the table."
-                      style="width: 100%; aspect-ratio: 16/9; border-radius: var(--radius-sm); object-fit: cover;">
+                      style="width: 100%; height: auto; border-radius: var(--radius-sm); object-fit: contain;">
                   </div>
                   <div class="video-description">
                     <strong>Egocentric view:</strong> A human hand pulls the highlighted white bottle closer on the table.
