--- a/data-viewer.html
+++ b/data-viewer.html
@@ -162,6 +162,58 @@
       display: block;
     }
 
+    .scenario-selector {
+      margin-bottom: 1.5rem;
+      padding-bottom: 1.5rem;
+      border-bottom: 1px solid var(--line);
+    }
+
+    .scenario-selector h3 {
+      margin-bottom: 0.75rem;
+      font-size: 1.1rem;
+    }
+
+    .scenario-tabs {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+    }
+
+    .scenario-tab {
+      padding: 0.5rem 0.9rem;
+      border-radius: 999px;
+      background: rgba(126, 77, 255, 0.1);
+      border: 1px solid #d1bcfb;
+      color: #5937af;
+      font: 500 0.88rem/1 "Outfit", "Segoe UI", sans-serif;
+      cursor: pointer;
+      transition: all 150ms ease;
+    }
+
+    .scenario-tab:hover {
+      background: rgba(126, 77, 255, 0.15);
+      border-color: #b89ef5;
+    }
+
+    .scenario-tab.active {
+      background: linear-gradient(130deg, var(--accent) 0%, var(--accent-dark) 100%);
+      color: #fff;
+      border-color: var(--accent-dark);
+      box-shadow: 0 4px 12px rgba(106, 62, 213, 0.2);
+    }
+
+    .video-container {
+      margin-top: 1.5rem;
+    }
+
+    .scenario-video {
+      display: none;
+    }
+
+    .scenario-video.active {
+      display: block;
+    }
+
     @media (max-width: 860px) {
       .data-viewer-container {
         grid-template-columns: 1fr;
@@ -193,8 +245,10 @@
       </a>
       <nav aria-label="Primary navigation">
         <a href="index.html">Home</a>
+        <a href="index.html#solution">Solution</a>
         <a href="index.html#modalities">Modalities</a>
         <a href="index.html#waitlist">Waitlist</a>
+        <a href="generate-synthetic-data.html" class="btn btn-primary" style="margin-left: 0.5rem;">Generate Synthetic Data</a>
       </nav>
     </div>
   </header>
